# axum-mongo-api

./: Cargo.toml  README.md  example.env
mongodb/: docker-compose.yml
src/: main.rs  mongodb_order_store.rs  order_store.rs
src/api/: health.rs  orders.rs  response.rs
